<resources>
    <string name="app_name">Викторина Киногик</string>
    <!--main fragment-->
    <string name="main_title">ВИКТОРИНА\nКИНОГИК</string>
    <string name="start_btn_text">ИГРАТЬ</string>
    <string name="about_btn_text">О НАС</string>
    <string name="rules_btn_text">ПРАВИЛА</string>
    <string name="faq_btn_text">FAQ</string>
    <string name="sound_btn_text">ЗВУК:</string>
    <!--question fragment-->
    <string name="first_hint">Убрать лишние</string>
    <string name="second_hint">Показать букву</string>
    <string name="bonus_hint">БОНУС +10</string>
    <string name="next_text">ОТЛИЧНО! \n \n Нажмите на экран чтобы продолжить</string>
    <string name="hints_title">Подсказок %1$d</string>
    <string name="question_title">Вопрос %1$d</string>
    <string name="end_game_text">ПОЗДРАВЛЯЮ! \n Вы прошли уровень %1$s </string>
    <!--dialogs-->
    <string name="dialog_title">Проверка на случайное нажатие.</string>
    <string name="dialog_bonus_message">Получить +10 подсказок за просмотр рекламы?</string>
    <string name="dialog_rate_message">Перейти на страницу приложения в Play Market?</string>
    <string name="positive_button">Да</string>
    <string name="negative_button">Назад</string>
    <!--admob id's-->
    <string name="Ad_app_id">ca-app-pub-6226897137661330~8831124323</string>
    <string name="interstitial_id">ca-app-pub-6226897137661330/6234742967</string>
    <string name="test_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewarded_video_id">ca-app-pub-6226897137661330/2064274105</string>
    <string name="test_rewarded_video_id">ca-app-pub-3940256099942544/5224354917</string>
    <!--app links-->
    <string name="market_url">market://details?id=com.bignerdranch.android.cinemaquiz</string>
    <string name="market_browser_url">https://play.google.com/store/apps/details?id=com.bignerdranch.android.cinemaquiz</string>
    <string name="email_link">cinema_geek@mail.ru</string>
    <!--error messages-->
    <string name="error_open_market_message">Не удалось открыть Android-маркет, проверьте, установлено ли приложение маркета и попробуйте снова.</string>
    <string name="error_load_sound_file_message">Ошибка при загрузке звукового файла.</string>
    <!--about text-->
    <string name="about_text">Привет! Меня зовут Роман. Я Android-разработчик и создатель этого приложения.
        Я очень рад видеть тебя здесь. Надеюсь ты найдешь то что тебе интересно и в процессе получишь только положительные эмоции)
        \nЕсли у тебя есть ко мне вопросы, предложения или может быть у тебя есть идея для интересного вопроса или категории, ты всегда можешь мне написать.
        Ссылку на почту для этого ты найдешь внизу.
        Пиши туда же, если тобой был обнаружен баг или опечатка. Я обязательно это исправлю.
    \nТы так же можешь оставить свой отзыв на странице в маркете. Это поможет в развитии приложения.
    \nЯ желаю тебе приятной игры)
    \nДа пребудет с тобой Сила)</string>
    <!--other-->
    <string name="send_email">Написать разработчику</string>
    <string name="error_msg">Ошибка при загрузке %1$s. Сообщите об ошибке нам на почту</string>
</resources>
