<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_menu_bg"
    tools:context="com.bignerdranch.android.cinemaquiz.activities.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/top_bottom_stroke"
        android:fontFamily="@font/trixie"
        android:text="@string/main_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="42sp"/>

    <TextView
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/main_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/trixie"
        android:text="@string/start_btn_text"
        android:textColor="#ffffff"
        android:textSize="42sp" />

    <TextView
        android:id="@+id/rules_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/trixie"
        android:text="@string/rules_btn_text"
        android:textColor="#ffffff"
        android:textSize="42sp"/>

    <TextView
        android:id="@+id/faq_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rules_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/trixie"
        android:text="@string/faq_btn_text"
        android:textColor="#ffffff"
        android:textSize="42sp"/>

    <ImageButton
        android:id="@+id/sound_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/start_button"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/start_button"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_sound"
        app:srcCompat="@drawable/volume_on"/>

    <ImageButton
        android:id="@+id/rate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start_button"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/start_button"
        android:background="@android:color/transparent"
        app:srcCompat="@drawable/rate_icon"/>

</RelativeLayout>
