<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/question_fragment_bg">

    <LinearLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="13dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/question_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:fontFamily="@font/trixie"
            android:textAlignment="textStart"
            android:textColor="#FFD4D4D4"
            android:textSize="18sp"
            tools:text="Вопрос 14" />

        <TextView
            android:id="@+id/hint_count"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:fontFamily="@font/trixie"
            android:textAlignment="textEnd"
            android:textColor="#FFD4D4D4"
            android:textSize="18sp"
            tools:text="Подсказок 26" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_container"
        android:layout_above="@+id/answer_container"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rectangle_rounded"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:textAlignment="viewStart"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                tools:text="@android:string/autofill" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/answer_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/hint_container"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/hint_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/game_cell_container"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <Button
            android:id="@+id/hint_1"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/hint_button"
            android:fontFamily="@font/trixie"
            android:text="@string/first_hint"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <Button
            android:id="@+id/hint_bonus"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/trixie"
            android:layout_weight="1"
            android:background="@drawable/bonus_button"
            android:enabled="false"
            android:text="@string/bonus_hint"
            android:textColor="@color/disabled_bonus_button" />

        <Button
            android:id="@+id/hint_2"
            style="@android:style/Widget.Button.Inset"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="@font/trixie"
            android:layout_weight="1"
            android:background="@drawable/hint_button"
            android:text="@string/second_hint"
            android:textColor="#ffffff"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_cell_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" />

    <Button
        android:id="@+id/next_button"
        style="@style/next_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/next_text"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/large_question_number"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/trixie"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="180sp"
        android:visibility="gone"
        tools:text="25"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminateDrawable="@drawable/progress_bar"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>